@@ -1,3 +1,10 @@
+2003-11-22  Jens Thiele  <karme@berlios.de>
+
+	* improved error handling
+	moved common error handling macros to common/error.h
+	C++ code should only throw java exceptions
+	try to always call SDL_Quit on exit
+
 2003-11-21  Jens Thiele  <karme@berlios.de>
 
 	* tried to add a hack around the resize problem with
